Fixed after change image not showing

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -283,3 +283,26 @@ top: 3px;
   .pages div svg{
     fill: #333;
   }
+
+  .templateDialog{
+    padding: 20px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    max-width: 1100px;
+    background: #fefefe;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+  .tmeplateDiv{
+    display: grid;
+    grid-template-columns: repeat(2,1fr) ;
+    overflow: hidden;
+    gap: 30px;
+  }
+  .tmeplateDiv img{
+    width: 500px;
+    border: 2px solid #a7a6a6;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+  }
